tests/fail/non_ref_return_on_deref.rs
use implore::impl_op;

#[derive(Copy, Clone, PartialEq, Eq, Debug)]
struct X;

#[impl_op]
fn deref(lhs: &X) -> HashMap<&'static str, Vec<u32>> {
    lhs
}

fn main() {}
